Update list to link to other recipes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="chocolatecake.html">Chocolate Cake</a></li>
+        <li><a href="recipes/chocolatecake.html">Chocolate Cake</a></li>
+        <li><a href="recipes/chickenmarsala.html">Chicken Marsala</a></li>
+        <li><a href="recipes/pancakes.html">Pancakes</a></li>
     </ul>
 </body>
 </html>
